flex/flex-tests/testData/js2_highlighting/Generics.js2
package {
  public class <error descr="Class 'Vector' should be defined in file 'Vector.js2'"><info descr="classes//class name">Vector$object</info></error> {
      <info descr="attribute">[Bindable]</info>
      var <info descr="instance field">foo</info>;
  }
}
var <info descr="identifiers//global variable">a</info>:<info descr="classes//class name">Vector</info>.<int> = null;
